# monorepo

./: .gitignore  CNAME  README.md  convert_marp.sh  mkdocs.yml  pyproject.toml  style.css
.github/workflows/: deploy.yaml
docs/: index.md  style.css
search/: search_index.json
site/: 404.html  index.html
site/search/: search_index.json
workshops/webscraping/: flow.md  get_ready.md  html_and_css.md  notes.md  schedule.md  session_sentiment_analysis.md  webscraping_introduction.md  wrapup.md
