[project]
name = "monorepo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cairosvg>=2.7.1",
    "meta>=1.0.2",
    "mkdocs>=1.6.1",
    "mkdocs-material[imaging]>=9.5.49",
    "mkdocs-rss-plugin>=1.17.1",
]


[tool.ruff]
select = ["I"]
